kubernetes/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-container
  namespace: exam
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database-statefulset
  namespace: exam
spec:
  serviceName: mysql-container
  replicas: 2
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: mysql-container
          image: mysql:8.0
          ports:
          - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mysql-persistent-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
